# app/models/project.py
@@ -1,0 +1,13 @@
+from datetime import datetime, timezone
+
+from sqlmodel import SQLModel, Field
+
+
+class Project(SQLModel, table=True):
+    __tablename__ = "projects"
+
+    id: int | None = Field(default=None, primary_key=True)
+    title: str = Field(index=True)
+    description: str | None = Field(default=None)
+    created_dt: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
+    updated_dt: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
